Fix for Mozilla Firefox (Split Image: Slider barely visible)

--- a/split_image.css
+++ b/split_image.css
@@ -38,12 +38,14 @@
     position: absolute;
     top: 0;
     width: 100%;
+    height: 100%;
     z-index: 98;
     overflow: hidden;
 }
 .wrapper .slider input
 {
     width: 100%;
+    height: 100%;
     outline: none;
     appearance: none;
     -webkit-appearance: none;
